@@ -2,8 +2,12 @@ postgresql-autodoc (1.31-1) UNRELEASED; urgency=low
 
   * New upstream version.
     + Fixes compatibility with recent libdbd-pg-perl. (Closes: #469715)
+  * debian/rules:
+    + config.sub and config.guess are unused by ./configure, so remove
+      altogether.
+  * debian/control: Remove build dependency on autotools-dev.
 
- -- Tim Retout <tim@retout.co.uk>  Fri, 02 May 2008 00:09:44 +0100
+ -- Tim Retout <tim@retout.co.uk>  Fri, 02 May 2008 00:34:03 +0100
 
 postgresql-autodoc (1.30-2) unstable; urgency=low
 
